--- a/src/app/modules/location-dashboard/modules/location-summary/components/location-summary-context/inner-items/location-card-summary/location-card-summary.component.scss
+++ b/src/app/modules/location-dashboard/modules/location-summary/components/location-summary-context/inner-items/location-card-summary/location-card-summary.component.scss
@@ -16,7 +16,7 @@
     padding: 0;
   }
 
-  .dashboard-summary-header-left {
+  .location-activities-header-left {
     h1 {
       font-size: 16px;
       line-height: 20px;
@@ -24,10 +24,27 @@
       margin: 0 0 5px 0;
     }
 
-    p {
-      color: #777777;
-      letter-spacing: 0.8px;
+    div {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+
+      mat-icon {
+        color: #1C95D5;
+        margin: 0;
+        padding: 0;
+      }
+
+      p {
+        color: black;
+        margin: 0 0 0 10px;
+        padding: 0;
+        font-size: 14px;
+        font-weight: 500;
+        letter-spacing: 0.8px;
+      }
     }
+
   }
 
   .mat-form-field-input {
